--- a/src/components/Landing/Who.astro
+++ b/src/components/Landing/Who.astro
@@ -273,7 +273,7 @@ import Downarrow from './Downarrow.astro';
         .Emoji {
             height: 40px;
             top: 60%;
-            left: 75%;
+            left: 78%;
             rotate: 0deg;
         }
         
@@ -328,6 +328,11 @@ import Downarrow from './Downarrow.astro';
         .parrafo {
             width: 70%;
             font-size: 28px;
+            transform: translateY(20%);
+            padding-bottom:80px;
+        }
+        .button {
+            transform: translateY(-55%);
         }
         .Emoji {
             height: 70px;
