Frame 3 responsive for laptops

--- a/src/components/Landing/Who.astro
+++ b/src/components/Landing/Who.astro
@@ -45,12 +45,12 @@ import Downarrow from './Downarrow.astro';
         overflow: hidden;
         padding: 50px 0;
         margin-top: 20px;
-        min-height: 700px;
+        height: 1100px;
     }
     
     .FrameTwoImgs {
         position: relative;
-        height: 600px;
+        height: 750px;
         overflow: hidden;
     }
 
@@ -103,7 +103,7 @@ import Downarrow from './Downarrow.astro';
         height: 100px;
         z-index: 90;
         position: absolute;
-        top: 60%;
+        top: 53%;
         left: 61%;
         transition: all 0.5s ease;
 
@@ -187,7 +187,7 @@ import Downarrow from './Downarrow.astro';
     
     /*Boton*/
     .button {
-        transform:translateY(25%) ;        
+        transform:translateY(40%) ;        
         display: block;
         width: fit-content;
         margin: 20px auto;
@@ -363,7 +363,7 @@ import Downarrow from './Downarrow.astro';
         
         .FWhite {
             left: 65%;
-            top: 50%;
+            top: 45%;
         }
         .PhOne {
             top: 30%;
@@ -376,14 +376,19 @@ import Downarrow from './Downarrow.astro';
             height:  250px;
         }
         .Pregunta {
-            top: 75%;
+            top: 65%;
         }
         .Emoji {
-            top: 75%;
+            top: 68%;
             left: 63%;
         }
         .parrafo {
-            transform: translateY(5%);
+            transform: translateY(-50%);
         }
+        .button {
+            transform: translateY(-170%);
+        }
+        .FrameTwo_Main { 
+            height: 950px;
     }
 </style>
