--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,8 @@ import  SpeedInsights  from "@vercel/speed-insights/astro"
 import NavBar from "../components/Landing/NavBar.astro"
 import Hero from "../components/Landing/Hero.astro"
 import Who from "../components/Landing/Who.astro"
+import Firstgen from "../components/Landing/Firstgen.astro"
+
 ---
 
 <html lang="en">
@@ -29,7 +31,7 @@ import Who from "../components/Landing/Who.astro"
 		<!-- ¿Quienés somos? -->
 		<Who></Who>
 		<!-- 1rst Gen -->
-
+		<Firstgen></Firstgen>
 		<!-- Misión y Visión -->
 
 		<!-- ¿Qué hemos hecho? -->
