--- a/src/components/Landing/Who.astro
+++ b/src/components/Landing/Who.astro
@@ -296,7 +296,7 @@ import Downarrow from './Downarrow.astro';
     /*Tablet*/
     @media (min-width: 600px) and (max-width: 1024px) {
         .FrameTwo_Main {
-            min-height: 650px;
+            height: 850px;
         }
         
         .Counter {
@@ -337,7 +337,7 @@ import Downarrow from './Downarrow.astro';
         .Emoji {
             height: 70px;
             top: 80%;
-            left: 65%;
+            left: 70%;
         }
     }
 
