--- a/src/components/Landing/Hero.astro
+++ b/src/components/Landing/Hero.astro
@@ -327,7 +327,7 @@ import Downarrow from './Downarrow.astro';
     @media (min-width: 600px) and (max-width: 1024px) {
         .heroImgs {
             width: 100%;
-            height: 520px;
+            height: 580px;
             padding-bottom: 10px;
             overflow: hidden;
         }
@@ -410,9 +410,10 @@ import Downarrow from './Downarrow.astro';
 
         /*Text*/
         .heroText {
-            margin-top: 3%;
+            margin-top: 0%;
             font-size: 35px;
             width: 50%;
+            transform:translateY(-20%);
         }
 
         .FirmaAlbert {
