--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import NavBar from "../components/Landing/NavBar.astro"
 import Hero from "../components/Landing/Hero.astro"
 import Who from "../components/Landing/Who.astro"
 import Firstgen from "../components/Landing/Firstgen.astro"
-
+import Mandvcards from "../components/Landing/Mandvcards.astro"
 ---
 
 <html lang="en">
@@ -33,7 +33,7 @@ import Firstgen from "../components/Landing/Firstgen.astro"
 		<!-- 1rst Gen -->
 		<Firstgen></Firstgen>
 		<!-- Misión y Visión -->
-
+		<Mandvcards></Mandvcards>
 		<!-- ¿Qué hemos hecho? -->
 
 		<!-- Chatbot y Replicabilidad -->
