--- a/src/components/Landing/Firstgen.astro
+++ b/src/components/Landing/Firstgen.astro
@@ -1,5 +1,5 @@
 ---
-import Downarrow from "./Downarrow.astro";
+import Downarrow from "./Downarrow.astro"
 ---
 <div class="FrameThree">
     <div class="FrameThreeImgs">
