--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import Hero from "../components/Landing/Hero.astro"
 import Who from "../components/Landing/Who.astro"
 import Firstgen from "../components/Landing/Firstgen.astro"
 import Mandvcards from "../components/Landing/Mandvcards.astro"
+import Collage from '../components/Landing/Collage.astro'
 ---
 
 <html lang="en">
@@ -35,7 +36,7 @@ import Mandvcards from "../components/Landing/Mandvcards.astro"
 		<!-- Misión y Visión -->
 		<Mandvcards></Mandvcards>
 		<!-- ¿Qué hemos hecho? -->
-
+		<Collage></Collage>
 		<!-- Chatbot y Replicabilidad -->
 
 		<!--Testimonios -->
