--- a/src/components/Landing/Mandvcards.astro
+++ b/src/components/Landing/Mandvcards.astro
@@ -214,6 +214,9 @@ body {
     .Mcard h1 {
         padding-top: 10px;
     }
+    .Mcard a {
+        z-index: 100;
+    }
     h2 {
         opacity: 80%;
         margin-top: 50px;
