--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -59,5 +59,7 @@ import Collage from '../components/Landing/Collage.astro'
 			padding: 0;
 			font-family: 'Poppins', sans-serif;
 			overflow-x: hidden;
+			color: black;
+			background-color: white;
 		}
 	</style>
