--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -59,6 +59,9 @@ import Collage from '../components/Landing/Collage.astro'
 			padding: 0;
 			font-family: 'Poppins', sans-serif;
 			overflow-x: hidden;
+			
+		}
+		html {
 			color: black;
 			background-color: white;
 		}
