--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import Who from "../components/Landing/Who.astro"
 import Firstgen from "../components/Landing/Firstgen.astro"
 import Mandvcards from "../components/Landing/Mandvcards.astro"
 import Collage from '../components/Landing/Collage.astro'
+import Done from '../components/Landing/Done.astro'
 ---
 
 <html lang="en">
@@ -35,10 +36,12 @@ import Collage from '../components/Landing/Collage.astro'
 		<Firstgen></Firstgen>
 		<!-- Misión y Visión -->
 		<Mandvcards></Mandvcards>
-		<!-- ¿Qué hemos hecho? -->
+		<!-- Collage -->
 		<Collage></Collage>
+		<!-- ¿Qué hemos hecho? -->
+		<Done></Done>
 		<!-- Chatbot y Replicabilidad -->
-
+		
 		<!--Testimonios -->
 
 		<!-- Contacto -->
