--- a/src/components/Landing/Collage.astro
+++ b/src/components/Landing/Collage.astro
@@ -2,11 +2,11 @@
 import Downarrow from "./Downarrow.astro"
 ---
 <div class="Collage">
-    <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Photo_Frame4_Middle.png" alt="M" class="ImgMiddle" loading="eager">
-    <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Photo_Frame4_Left1.png" alt="L1" class="ImgLeftOne" loading="eager">
-    <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Photo_Frame4_Left2.png" alt="L2" class="ImgLeftTwo" loading="eager">
-    <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Photo_Frame4_Right1.png" alt="R1" class="ImgRightOne" loading="eager">
-    <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Photo_Frame4_Right2.png" alt="R2" class="ImgRightTwo" loading="eager">
+    <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Photo_Frame4_Middle.png" alt="M" class="ImgMiddle" loading="lazy">
+    <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Photo_Frame4_Left1.png" alt="L1" class="ImgLeftOne" loading="lazy">
+    <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Photo_Frame4_Left2.png" alt="L2" class="ImgLeftTwo" loading="lazy">
+    <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Photo_Frame4_Right1.png" alt="R1" class="ImgRightOne" loading="lazy">
+    <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Photo_Frame4_Right2.png" alt="R2" class="ImgRightTwo" loading="lazy">
 </div>
 <Downarrow></Downarrow>
 <style>
