--- a/src/components/Landing/Done.astro
+++ b/src/components/Landing/Done.astro
@@ -6,9 +6,9 @@ import Downarrow from "./Downarrow.astro"
         <div class="content-wrapper">
             <div class="Title">
                 <!-- .Pregunta -->        
-                <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/pregunta_2.png" alt="question" class="Pregunta" loading="eager">
+                <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/pregunta_2.png" alt="question" class="Pregunta" loading="lazy">
                 <!-- .CloudOne -->
-                <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/nube_1.png" alt="nube" class="CloudOne" loading="eager">
+                <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/nube_1.png" alt="nube" class="CloudOne" loading="lazy">
             </div>
             <div class="defo">
                 <div class="ProyectoDef">
