--- a/src/components/Landing/Hero.astro
+++ b/src/components/Landing/Hero.astro
@@ -1,5 +1,6 @@
 ---
 import Downarrow from './Downarrow.astro';
+import PersonaUno from '../../assets/PersonaUno.astro';
 ---
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -9,34 +10,34 @@ import Downarrow from './Downarrow.astro';
     <div class="heroImgs">
         <div class="heroMainImgs">
             <!-- Persona Mid -->
-            <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/P_Mid.png" alt="PU" class="PersonaUno" loading="eager">
+            <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/P_Mid.png" alt="PU" class="PersonaUno" loading="lazy">
             <!-- Persona Right -->
-            <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/P_Right.png" alt="PD" class="PersonaDos" loading="eager">
+            <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/P_Right.png" alt="PD" class="PersonaDos" loading="lazy">
             <!--Arbusto 1 -->
-            <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Bush_Left.png" alt="BL" class="Bush_Left" loading="eager">
+            <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Bush_Left.png" alt="BL" class="Bush_Left" loading="lazy">
             <!-- Arbusto 2 -->
-            <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Bush_Right.png" alt="BR" class="Bush_Right" loading="eager">
+            <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Bush_Right.png" alt="BR" class="Bush_Right" loading="lazy">
             <!-- Persona Left -->
-            <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/P_Left.png" alt="PL" class="Persona_Left" loading="eager">
+            <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/P_Left.png" alt="PL" class="Persona_Left" loading="lazy">
             <!-- Add-ons -->
             <!-- Colibrí -->
-            <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Animal_1.png" alt="A1" class="Colibri" loading="eager">
+            <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Animal_1.png" alt="A1" class="Colibri" loading="lazy">
             <!--Flores -->
-            <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Flower_Yellow.png" alt="Ye" class="FYellow" loading="eager">
-            <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Flower_White.png" alt="Wh" class="FWhite" loading="eager">
+            <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Flower_Yellow.png" alt="Ye" class="FYellow" loading="lazy">
+            <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Flower_White.png" alt="Wh" class="FWhite" loading="lazy">
             <!-- Flore head -->
-            <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Flower_Red.png" alt="Ro" class="FRed" loading="eager">
+            <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Flower_Red.png" alt="Ro" class="FRed" loading="lazy">
             <!--Photos -->
-            <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Photo_Hero_1.png" alt="PH1" class="Photo1" loading="eager">
-            <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Photo_Hero_2.png" alt="PH2" class="Photo2" loading="eager">
+            <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Photo_Hero_1.png" alt="PH1" class="Photo1" loading="lazy">
+            <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Photo_Hero_2.png" alt="PH2" class="Photo2" loading="lazy">
         </div>
         <div class="HeroBack">
-            <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Background.png" alt="Fondo" class="fondo" loading="eager">
+            <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Background.png" alt="Fondo" class="fondo" loading="lazy">
         </div>
     </div>
     <div class="heroText">
         <p>"El genio se hace con un 1% de talento y un 99% de trabajo duro."</p>
-        <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Graph_Albert.png" alt="Albert" class="FirmaAlbert" loading="eager">
+        <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Graph_Albert.png" alt="Albert" class="FirmaAlbert" loading="lazy">
     </div>
     <Downarrow></Downarrow>
 </div>
