--- a/src/components/Landing/NavBar.astro
+++ b/src/components/Landing/NavBar.astro
@@ -4,7 +4,7 @@
 <!-- Navbar -->
 <header>
 <!--Logo -->
-    <a href="https://pelaopro.vercel.app/" class="logo"><img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Logo_Black.png" alt="Logo" loading="eager"></a>
+    <a href="https://pelaopro.vercel.app/" class="logo"><img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Logo_Black.png" alt="Logo" loading="lazy"></a>
     <!-- Navbar links -->
     <ul class="navbar" id="navbar">
            <li><a href="/nosotros">Nosotros</a></li>
