--- a/src/components/Landing/Who.astro
+++ b/src/components/Landing/Who.astro
@@ -4,21 +4,21 @@ import Downarrow from './Downarrow.astro';
 <div class="FrameTwo_Main">
     <div class="FrameTwoImgs">
         <!-- Fondo -->
-        <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Background.png" alt="Fondo" class="fondo" loading="eager">
+        <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Background.png" alt="Fondo" class="fondo" loading="lazy">
         <!-- Contador -->
-        <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Contador.webp.png" alt="Counter" class="Counter" loading="eager">
+        <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Contador.webp.png" alt="Counter" class="Counter" loading="lazy">
         <!-- Nube 1 -->
-        <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/nube_1.png" alt="C1" class="Cloud_One" loading="eager">
+        <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/nube_1.png" alt="C1" class="Cloud_One" loading="lazy">
         <!-- Nube 2 -->
-        <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/nube_2.png" alt="C2" class="Cloud_Two" loading="eager">
+        <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/nube_2.png" alt="C2" class="Cloud_Two" loading="lazy">
         <!-- Flor Blanca -->
-        <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Flower_White.png" alt="Wh" class="FWhite" loading="eager">        
+        <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Flower_White.png" alt="Wh" class="FWhite" loading="lazy">        
         <!--Photo 1 -->
         <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Photo_Frame2_1.png" alt="P1" class="PhOne" loading="lazy">
         <!-- Photo 2 -->
         <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Photo_Frame2_2.png" alt="P2" class="PhTwo" loading="lazy">
         <!-- Pregunta -->
-        <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/pregunta.png" alt="P1" class="Pregunta" loading="eager">
+        <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/pregunta.png" alt="P1" class="Pregunta" loading="lazy">
         <!-- Emoji -->
         <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Emoji_Thinking.png" alt="" class="Emoji" loading="lazy">
     </div>
