--- a/src/components/Landing/Firstgen.astro
+++ b/src/components/Landing/Firstgen.astro
@@ -4,14 +4,14 @@ import Downarrow from "./Downarrow.astro"
 <div class="FrameThree">
     <div class="FrameThreeImgs">
          <!-- .festEmoji -->
-        <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Emoji_Fest.png" alt="Emoji" class="festEmoji" loading="eager">
+        <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Emoji_Fest.png" alt="Emoji" class="festEmoji" loading="lazy">
         <!-- .middleImg -->
-        <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Photo_Frame3_Middle.png" alt="Middle" class="middleImg" loading="eager">
+        <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Photo_Frame3_Middle.png" alt="Middle" class="middleImg" loading="lazy">
         <!-- .leftImg -->
-        <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Phot_Frame3_Left.png" alt="left" class="leftImg" loading="eager">
+        <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Phot_Frame3_Left.png" alt="left" class="leftImg" loading="lazy">
         <!-- .rightImg -->
-        <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Photo_Frame3_Right.png" alt="right" class="rightImg" loading="eager">
-        <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Butterfly_White.png" alt="Butterfly" class="WhButterfly" loading="eager">
+        <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Photo_Frame3_Right.png" alt="right" class="rightImg" loading="lazy">
+        <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Butterfly_White.png" alt="Butterfly" class="WhButterfly" loading="lazy">
         <a href="/nosotros" class="button">Ver más</a>
     </div>
 </div>
