--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,7 @@ import Firstgen from "../components/Landing/Firstgen.astro"
 import Mandvcards from "../components/Landing/Mandvcards.astro"
 import Collage from '../components/Landing/Collage.astro'
 import Done from '../components/Landing/Done.astro'
+import DoYouLike from '../components/Landing/DoYouLike.astro'
 ---
 
 <html lang="en">
@@ -41,7 +42,7 @@ import Done from '../components/Landing/Done.astro'
 		<!-- ¿Qué hemos hecho? -->
 		<Done></Done>
 		<!-- Chatbot y Replicabilidad -->
-		
+		<DoYouLike></DoYouLike>
 		<!--Testimonios -->
 
 		<!-- Contacto -->
