--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,7 @@ import Mandvcards from "../components/Landing/Mandvcards.astro"
 import Collage from '../components/Landing/Collage.astro'
 import Done from '../components/Landing/Done.astro'
 import DoYouLike from '../components/Landing/DoYouLike.astro'
+import Final from '../components/Landing/Final.astro'
 ---
 
 <html lang="en">
@@ -43,11 +44,10 @@ import DoYouLike from '../components/Landing/DoYouLike.astro'
 		<Done></Done>
 		<!-- Chatbot y Replicabilidad -->
 		<DoYouLike></DoYouLike>
-		<!--Testimonios -->
-
+		<!-- Thanks -->
+		 <Final></Final>
 		<!-- Contacto -->
 
-		<!-- Thanks -->
 
 		<!-- Footer -->
 		 
