--- a/src/components/Landing/Final.astro
+++ b/src/components/Landing/Final.astro
@@ -2,11 +2,38 @@
 import Downarrow from "./Downarrow.astro"
 ---
 <div class="Main">
-    <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/muro.png" alt="Back" class="Back" loading="lazy">
-    <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Photo_FrameFinale.png" alt="Pic" class="Picture" loading="lazy">
+    <div class="Other">
+        <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/muro.png" alt="Back" class="Back" loading="lazy">
+        <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Photo_FrameFinale.png" alt="Pic" class="Picture" loading="lazy">
+    </div>
+    <div class="Patro">
+        <h1> Un proyecto del:</h1>
+        <h3> Laboratorio Latinoamericano de Acción Ciudadana </h3>
+        <h4> -2025-</h4>
+    </div>
 </div>
+<Downarrow></Downarrow>
 <style>
     /*Normal*/
+    .Patro{
+        top: -10%;
+        z-index: 999;
+    }
+    h1 {
+        text-align: center;
+        font-size: 35px;
+    }
+    h3 {
+        text-align: center;
+        font-size: 50px;
+        font-weight: 400;
+        margin: 0 auto;
+        font-family: Caveat;
+        width: 60%;
+    }
+    h4 {
+        text-align: center;
+    }
     * {
         box-sizing: border-box;
         margin: 0;
@@ -17,21 +44,115 @@ import Downarrow from "./Downarrow.astro"
     .Main {
         position: relative;
         overflow: hidden;
+       
+        height: 900px;
+    }
+    .Other {
+        position: relative;
+        overflow: hidden;
         padding: 50px 0;
         margin-top: 20px;
-        height: 1100px;
+        height: 750px;
+        padding-top: 13%;
+    }
+    .Back {
+        z-index: 1;
+        width: auto;
+        height: 548px;
+        position: relative;
+        top: 13%;
+        left: 50%;
+        transform: translateX(-50%);
+        transition: all 0.5 ease;
+    }
+    .Picture {
+        z-index: 2;
+        width: auto;
+        height: 631px;
+        position: relative;
+        top: -180%;
+        left: 50%;
+        transform: translatex(-50% );
+        transition: all 0.5 ease;
+
     }
     /*Celular*/
     @media (max-width: 599px) {
-
+        .Main {
+            height: 600px;
+        }
+        .Picture {
+            width: auto;
+            height: 300px;
+            top: -85%;
+        }
+        .Back {
+            height: 120px;
+            top: 79%;
+        }
+        .Other {
+            height: 300px;
+        }
+        h1 {
+            padding-top: 50px;
+        text-align: center;
+        font-size: 25px;
+    }
+        h3 {
+            font-size: 30px ;
+            text-align: center;
+            margin: 0 auto;
+            font-family: Caveat;
+            width: 70%;
+        }
+        h4 {
+            text-align: center;
+        }
+        .Patro{
+        top: 0%;
+        
+        }
     }
     /*Tablet*/
     @media (min-width: 600px) and (max-width: 1024px) {
-
+        .Main {
+            height: 1000px;
+        }
+        .Other {
+            height: 650px;
+        }
+        .Back {
+           height: 300px; 
+           top:60%
+        }
+        .Picture {
+            top: -90%;
+        }
+        .Patro{
+        top: 0%;
+        
+        }
     }
     /*Laptop*/
     @media (min-width: 1025px) and (max-width: 1440px) {
+        .Main {
+            height: 900px;
+        }
+        .Back {
+           height: 350px; 
+           top: 45%;
 
+        }
+        .Other  {
+            height: 600px;
+        }
+        .Picture {
+            top: -155%;
+        }
+        .Patro{
+        top: 0%;
+        
+        }
     }
 
 </style>
