--- a/src/components/Landing/NavBar.astro
+++ b/src/components/Landing/NavBar.astro
@@ -7,7 +7,7 @@
     <a href="https://pelaopro.vercel.app/" class="logo"><img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Logo_Black.png" alt="Logo" loading="lazy"></a>
     <!-- Navbar links -->
     <ul class="navbar" id="navbar">
-           <li><a href="/nosotros">Nosotros</a></li>
+           <li><a href="/Who">Nosotros</a></li>
            <li><a href="/replicabilidad">Replicabilidad</a></li>
            <li><a href="/chatbot">Chatbot</a></li>
            <li><a href="/faqs">FAQ's</a></li>
