--- a/src/components/Landing/Who.astro
+++ b/src/components/Landing/Who.astro
@@ -1,8 +1,8 @@
 ---
 import Downarrow from './Downarrow.astro';
 ---
-<div class="FrameTwo_Main">
-    <div class="FrameTwoImgs">
+
+    <div class="FrameTwoImgs" id="Que_es_PelaoPro">
         <!-- Fondo -->
         <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Background.png" alt="Fondo" class="fondo" loading="lazy">
         <!-- Contador -->
