--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,6 +10,7 @@ import Collage from '../components/Landing/Collage.astro'
 import Done from '../components/Landing/Done.astro'
 import DoYouLike from '../components/Landing/DoYouLike.astro'
 import Final from '../components/Landing/Final.astro'
+import Contactanos from '../components/Landing/Contactanos.astro'
 ---
 
 <html lang="en">
@@ -47,7 +48,7 @@ import Final from '../components/Landing/Final.astro'
 		<!-- Thanks -->
 		 <Final></Final>
 		<!-- Contacto -->
-
+		<Contactanos></Contactanos>
 
 		<!-- Footer -->
 		 
