--- a/src/components/Landing/Contactanos.astro
+++ b/src/components/Landing/Contactanos.astro
@@ -74,6 +74,7 @@ import Downarrow from './Downarrow.astro'
       border-radius: 4px;
       font-family: inherit;
       font-size: 1rem;
+      z-index: 999;
     }
     
     textarea {
