--- a/src/components/Landing/DoYouLike.astro
+++ b/src/components/Landing/DoYouLike.astro
@@ -4,7 +4,7 @@ import Downarrow from "./Downarrow.astro"
 <div class="Main">
     <div class="Text">
         <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/pregunta_3.png" alt="Pregunta3" class="PreguntaTres" loading="lazy">
-        <h4>Bueno, si te gusto el proyecto actualmente Pelao’Pro esta en la fase de investigación para replicar el proyecto en otras partes del país,ero también te podemos brindar estas opciones:</h4>
+        <h4>Bueno, si te gusto el proyecto actualmente Pelao’Pro esta en la fase de investigación para replicar el proyecto en otras partes del país, pero también te podemos brindar estas opciones:</h4>
     </div>
     <div class="Cards">
         <div class="Chatbot">
@@ -72,7 +72,8 @@ h4 {
     width:55%;
     font-size: 24px ;
     margin: 0 auto;
-    font-weight: 300;
+    font-weight: 500;
+    font-family: caveat;
 }
 .PreguntaTres {
     margin-top: 100px;
