--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,7 @@ import Done from '../components/Landing/Done.astro'
 import DoYouLike from '../components/Landing/DoYouLike.astro'
 import Final from '../components/Landing/Final.astro'
 import Contactanos from '../components/Landing/Contactanos.astro'
+import Footer from '../components/Landing/Footer.astro'
 ---
 
 <html lang="en">
@@ -49,9 +50,8 @@ import Contactanos from '../components/Landing/Contactanos.astro'
 		 <Final></Final>
 		<!-- Contacto -->
 		<Contactanos></Contactanos>
-
 		<!-- Footer -->
-		 
+		 <Footer></Footer>
 		<!-- Data recolection from Vercel -->
 		<Analytics />
     	<SpeedInsights />
