--- a/src/components/Landing/Footer.astro
+++ b/src/components/Landing/Footer.astro
@@ -1,12 +1,12 @@
 <footer class="footer">
   <div class="footer-container">
     <ul class="footer-links">
-      <li><a href="#inicio">Inicio</a></li>
-      <li><a href="#nosotros">Nosotros</a></li>
-      <li><a href="https://pelaopro.vercel.app/replicabilidad">Replicabilidad</a></li>
-      <li><a href="#chatbot">Chatbot</a></li>
-      <li><a href="#faqs">FAQ's</a></li>
-      <li><a href="#apoyanos">Apóyanos</a></li>
+      <li><a href="https://pelaopro.vercel.app/">Inicio</a></li>
+      <li><a href="/nosotros">Nosotros</a></li>
+      <li><a href="/replicabilidad">Replicabilidad</a></li>
+      <li><a href="/chatbot">Chatbot</a></li>
+      <li><a href="/faqs">FAQ's</a></li>
+      <li><a href="/apoyanos"><strong>Apóyanos</strong></a></li>
       <li><a href="#contactanos">Contáctanos</a></li>
     </ul>
     <div class="footer-social">
@@ -49,10 +49,13 @@
     color: white;
     text-decoration: none;
     transition: color 0.3s ease;
+    padding-left: 5px;
+    padding-right: 5px;
   }
 
   .footer-links a:hover {
-    color: #f39c12;
+    background-color: #ddf312;
+    color: black;
   }
 
   .footer-social p {
@@ -60,7 +63,7 @@
   }
 
   .footer-social a {
-    color: #f39c12;
+    color: #0db2f3;
     text-decoration: none;
     font-weight: 500;
     transition: color 0.3s ease;
