--- a/src/pages/chatbot.astro
+++ b/src/pages/chatbot.astro
@@ -1,1 +1,29 @@
-<h1>hola</h1>
+---
+import Chatbotscript from '../components/Chatbotscript.tsx';
+---
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <Chatbotscript client:load />
+</body>
+</html>
+<style>
+    /* Global Styles */
+    * {
+        margin: 0;
+        padding: 0;
+        font-family: 'Poppins', sans-serif;
+        overflow-x: hidden;
+        
+    }
+    html {
+        color: black;
+        background-color: white;
+    }
+</style>
+
