--- a/src/pages/nosotros.astro
+++ b/src/pages/nosotros.astro
@@ -1,41 +1,37 @@
-<!DOCTYPE html>
+---
+import NavBar from "../components/Landing/NavBar.astro";
+---
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <div class="Main">
-    <h1>Nuestra Historia📕</h1>
-    <p>En la búsqueda de nuestro proyecto para el LLAC 2025, encontramos la siguiente problemática social que nos alarmó:
-        En Panamá, más de 250 000 jóvenes de entre 15 y 24 años ni estudian ni trabajan (“ninis”), y cada año se suman alrededor de 14 000 nuevos casos. Este fenómeno no responde a falta de interés, sino a barreras económicas, sociales y estructurales: bajos ingresos familiares, escaso acceso a oportunidades educativas formales, falta de experiencia laboral y entornos vulnerables que obligan a muchos jóvenes a asumir responsabilidades familiares desde edades tempranas.
-        
-        Esto nos impactó de tal manera que decidimos que este debería ser el tema de nuestro proyecto.</p>
-</div>
-</body>
+	<head>
+		<meta charset="utf-8" />
+		<link rel="icon" type="image" href="/temp favi.png" />
+		<meta name="viewport" content="width=device-width" />
+		<meta name="generator" content={Astro.generator} />
+		<!-- SEO -->
+		<meta name="description" content="Pelao'Pro te ayuda a descubrir tu pasión, prepararte para la universidad y emprender desde joven." />
+		<meta name="keywords" content="emprendimiento, jóvenes, futuro, educación, universidad, innovación, panamá, becas, Pelao Pro, pelaopro, PelaoPro, Pelao'Pro" />
+		<meta name="author" content="PelaoPro" />
+		<meta property="og:title" content="Pelao'Pro | Educación y Emprendimiento para Jóvenes" />
+		<meta property="og:description" content="Descubre tu pasión, prepárate para la universidad y emprende desde joven con Pelao'Pro." />
+		<meta name="author" content="PelaoPro" />
+		<title>Nosotros🗣️</title>
+	</head>
+	<body>
+		<NavBar></NavBar>
+
+	</body>
 </html>
 <style>
-    * {
-        box-sizing: border-box;
-        margin: 0;
-        padding: 0;
-    }
-    h1 {
-        text-align: center;
-        margin-top: 10rem;
-        font-size: 90px;
-        font-family: Caveat;
-        font-weight: 500;
-}
-p {
-    width: 50%;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 24px;
-    margin: 0 auto;
-    padding-top: 5vh;
-    font-size: 21px;
-    line-height: 26px;
-
-}
-</style>
+		/* Global Styles */
+		* {
+			margin: 0;
+			padding: 0;
+			font-family: 'Poppins', sans-serif;
+			overflow-x: hidden;
+			
+		}
+		html {
+			color: black;
+			background-color: white;
+		}
+	</style>
