--- a/src/pages/chatbot.astro
+++ b/src/pages/chatbot.astro
@@ -1,5 +1,6 @@
 ---
 import Chatbotscript from '../components/Chatbotscript.tsx';
+import NavBarWhite from '../components/Landing/NavBarWhite.astro';
 ---
 <!DOCTYPE html>
 <html lang="en">
@@ -9,6 +10,7 @@ import Chatbotscript from '../components/Chatbotscript.tsx';
     <title>Document</title>
 </head>
 <body>
+    <NavBarWhite></NavBarWhite>
     <Chatbotscript client:load />
 </body>
 </html>
