--- a/src/components/Landing/NavBarWhite.astro
+++ b/src/components/Landing/NavBarWhite.astro
@@ -1,10 +1,8 @@
-<!-- Menu Icon Import -->
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=menu" />
 
 <!-- Navbar -->
 <header>
 <!--Logo -->
-    <a href="https://pelaopro.vercel.app/" class="logo"><img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Logo_Black.png" alt="Logo" loading="lazy"></a>
+    <a href="https://pelaopro.vercel.app/" class="logo"><img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/LogoWhite.png" alt="Logo" loading="lazy"></a>
     <!-- Navbar links -->
     <ul class="navbar" id="navbar">
            <li><a href="/nosotros">Nosotros</a></li>
@@ -16,7 +14,7 @@
     </ul>
     <!-- Menu Icon -->
     <div class="hamburger" id="menu-icon">
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"><path d="M4 6h16v2H4zm0 5h16v2H4zm0 5h16v2H4z"></path></svg>
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgb(255, 255, 255);transform: ;msFilter:;"><path d="M4 6h16v2H4zm0 5h16v2H4zm0 5h16v2H4z"></path></svg>
     </div>
 </header>
 <style>
@@ -31,9 +29,10 @@
         font-family: poppins, sans-serif;
         font-size: clamp(1rem, 2vw, 12px.);
     }
+    
     header {
         /*Margin, padding, sizing*/
-        padding-top: 25px;
+        padding-top: 30px;
         margin-left: 10%;
         padding-bottom: 10px;
         width: 100%;
@@ -106,6 +105,7 @@
     }
     }
     @media (max-width: 1080px) {
+      
         header {
             margin-left: 5%;
         }
@@ -173,7 +173,9 @@
             display: block;
             align-items: center;
         }
-        
+        a {
+        color: black;
+    }
         /* Estilo para el botón X cuando está activo */
         .x.active {
             display: block;
@@ -187,6 +189,9 @@
         .hamburger {
             font-size: 50px;
         }
+        a {
+        color: black;
+    }
     } 
 </style>
 <script>
